--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -94,7 +94,7 @@
 
       <!-- Form submit button -->
       <div class="d-grid">
-        <a href="../index.html" class="btn btn-primary btn-lg" id="submitButton">Enviar</a>
+        <a href="./error404.html" class="btn btn-primary btn-lg" id="submitButton">Enviar</a>
       </div>
       <div> <label for=""> Acepto los terminos y condiciones</label></div>
           <input type="checkbox">
