--- a/pages/error404.html
+++ b/pages/error404.html
@@ -11,10 +11,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img\favicom.png">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="shortcut icon" href="../img\favicom.png">
     <script src="https://kit.fontawesome.com/3a0c3715e1.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Página web del músico Stefano Caranza</title>
   </head>
   
@@ -30,19 +30,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./index.html">inicio</a>
+            <a class="nav-link" aria-current="page" href="../index.html">inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/multimedia.html">multimedia</a>
+            <a class="nav-link" href="./multimedia.html">multimedia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/escucha.html">escuchá</a>
+            <a class="nav-link" href="./escucha.html">escuchá</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/shows.html">shows</a>
+            <a class="nav-link" href="./shows.html">shows</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/contacto.html">contacto</a>
+            <a class="nav-link" href="./contacto.html">contacto</a>
           </li>
         </ul>
       </div>
@@ -50,7 +50,8 @@
   </nav>
  <!--fin de nav bar-->
 
- <main class="main">
+ <main class="mainerror conteiner-fluid">
+    
  
 </main>
 <!--este es mi footer-->
