--- a/pages/shows.html
+++ b/pages/shows.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="./multimedia.html">multimedia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/escucha.html">escuchá</a>
+            <a class="nav-link" href="./escucha.html">escuchá</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./shows.html">shows</a>
